--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "demo",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://vvslaxman.github.io/demo-centella-scientific", 
+  "homepage": "https://vvslaxman.github.io/demo-centella-scientific",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.71.0",
     "@react-three/fiber": "^8.13.0",
     "autoprefixer": "^10.4.14",
+    "caniuse-lite": "^1.0.30001690",
     "framer-motion": "^10.12.16",
     "globe.gl": "^2.28.4",
     "maath": "^0.6.0",
